[package]
name = "michi_matome_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
rss = "2"
scraper = "0.18"
chrono = "0.4"
anyhow = "1"
quick-xml = "0.39.2"
encoding_rs = "0.8"
regex = "1"
thiserr = "0.1.0"
thiserror = "2.0.18"
